--- a/allassistanceservices.html
+++ b/allassistanceservices.html
@@ -27,7 +27,8 @@
 <!-- Bootstrap and JQuery js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="../JS/inclusion.js"></script>
+  <script src="JS/inclusion.js"></script>
+  <script src="JS/script.js"></script>
   
  </head>
 
@@ -36,11 +37,21 @@
 <div class="include" data-include="navbar"></div>
 <div class="include" data-include="consumernavbar"></div>
 
+<!-- BREADCRUMB -->
+<div class="container-fluid">
+	<div class="row">
+		<ol class="breadcrumb" >
+		  <li class="active"> All Assistance Services</li>
+		</ol>
+	</div>
+</div>
+<!-- END BREADCRUMB -->
+
 <!--DEVICES IMAGE -->
 <div class="container-fluid">
 	<div class="row">
 		<div class="topimage">
-			<img src="../images/assistance.png">
+			<img src="images/assistance.png">
 		</div>
 	</div>
 </div>
@@ -54,9 +65,9 @@
 			<div class="categories">
 				<div class="col-xs-3">
 					<div class="service">
-						<a href="#">
+						<a href="assistancecategory.html#category='Line Management'">
 							<div class="thumbnail">
-								<img src="../images/linemanagement.png" alt="">
+								<img src="images/linemanagement.png" alt="">
 							</div>
 							<h4>Line management</h4>
 						</a>
@@ -64,9 +75,9 @@
 				</div>
 				<div class="col-xs-3">
 					<div class="service">
-						<a href="#">
+						<a href="assistancecategory.html#category='Monitoring Costs And Payment'">
 							<div class="thumbnail">
-								<img src="../images/costpayments.png" alt="">
+								<img src="images/costpayments.png" alt="">
 							</div>
 							<h4>Monitoring costs and payments</h4>
 						</a>
@@ -74,9 +85,9 @@
 				</div>
 				<div class="col-xs-3">
 					<div class="service">
-						<a href="#">
+						<a href="assistancecategory.html#category='Technical Support'">
 							<div class="thumbnail">
-								<img src="../images/techsupport.png" alt="">
+								<img src="images/techsupport.png" alt="">
 							</div>
 							<h4>Technical support</h4>
 						</a>
@@ -84,9 +95,9 @@
 				</div>
 				<div class="col-xs-3">
 					<div class="service">
-						<a href="#">
+						<a href="assistancecategory.html#category='Smart Life Assistance'">
 							<div class="thumbnail">
-								<img src="../images/smartassistance.png" alt="">
+								<img src="images/smartassistance.png" alt="">
 							</div>
 							<h4>Smart Life assistance</h4>
 						</a>
