--- a/businessandmarket.html
+++ b/businessandmarket.html
@@ -26,7 +26,8 @@
 <!-- Bootstrap and JQuery js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="../JS/inclusion.js"></script>
+  <script src="JS/inclusion.js"></script>
+  <script src="JS/script.js"></script>
  </head>
 
 <body>
@@ -34,10 +35,19 @@
 <div class="include" data-include="navbar"></div>
 <div class="include" data-include="thegroupnavbar"></div>
 
+<!-- BREADCRUMB -->
+<div class="container-fluid">
+	<div class="row">
+		<ol class="breadcrumb">
+		  <li class="active"> Business & Market </li>
+		</ol>
+	</div>
+</div>
+<!-- END BREADCRUMB -->
 
 <!-- IMAGE AND TEXT -->
 	<div class="imgtext">
-		<img src="../images/business.jpg">
+		<img src="images/business.jpg">
 		<div class="businesstext">
 			<h3><b> M-MOBILE BUSINESS MODEL </b></h3>
 			<p> Our strategic markets are Italy and Brasil. Operations are conducted by dedicate Business Units:  the Domestic Business Unit -  it includes fixed and mobile voce and data services for retail customers and wholesale operators, as well as  international wholesale services (M-Mobile Sparkle ) and IT solutions (Olivetti) -  and the Brazil Business Unit (M-Mobile Brasil).</br></br>    
@@ -56,7 +66,7 @@
 				The Group is also active in Europe, Americas, Africa and Asia through M-Mobile Sparkle, a leading global operator providing a wide range of IP, Data, Cloud, Data Center, Mobile and Voice solutions to Fixed and Mobile Operators, ISPs, OTTs, Media & Content Players, Application Service Providers and Multinational Corporations.</br></br>
 				The Group may be contacted through the local offices of M-Mobile and M-Mobile Sparkle.
 			</p>
-			<img src="../images/presenceworld.jpg">
+			<img src="images/presenceworld.jpg">
 		</div>
 	</div>
 	
