--- a/consumernavbar.html
+++ b/consumernavbar.html
@@ -23,7 +23,7 @@
 								<li><a href="devicegrid.html#category='Tablet'"onClick="window.location.reload()">Tablets & PCs</a></li>
 								<li><a href="devicegrid.html#category='Networking'" onClick="window.location.reload()" >Modem & Networking</a></li>
 								<li><a href="devicegrid.html#category='SmartLiving'" onClick="window.location.reload()">TV & Smart Living</a></li>
-								<li><a href="devicegrid.html">Outlet</a></li>								
+								<li><a href="devicegrid.html#category='Outlet'" onClick="window.location.reload()">Outlet</a></li>								
 							</ul>
 					</li>
 					<li class="dropdown">
@@ -39,11 +39,11 @@
 					<li class="dropdown">
 						<a class="dropdown-toggle" data-toggle="dropdown" href="#">Assistance Service</a>
 							<ul class="dropdown-menu">
-								<li><a class="menu-title" href="allassistanceservices.html">All Assistance Services</a></li>
-								<li><a href="assistancecategory.html">Line Management</a></li>
-								<li><a href="assistancecategory.html">Monitoring Costs & Payments</a></li>
-								<li><a href="assistancecategory.html">Technical Support</a></li>
-								<li><a href="assistancecategory.html">Smart Life Assistance</a></li>							
+								<li><a class="menu-title" href="allassistanceservices.html" onClick="window.location.reload()">All Assistance Services</a></li>
+								<li><a href="assistancecategory.html#category='Line Management'" onClick="window.location.reload()">Line Management</a></li>
+								<li><a href="assistancecategory.html#category='Monitoring Costs And Payment'" onClick="window.location.reload()">Monitoring Costs & Payment</a></li>
+								<li><a href="assistancecategory.html#category='Technical Support'" onClick="window.location.reload()">Technical Support</a></li>
+								<li><a href="assistancecategory.html#category='Smart Life Assistance'" onClick="window.location.reload()">Smart Life Assistance</a></li>							
 							</ul>
 					</li>
 				</ul>
