--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
   <script type="text/javascript" src="JS/jssor.slider.mini.js"></script>
   <script src="JS/inclusion.js"></script>
   <script src="JS/pagefiller.js"></script>
+  <script src="JS/script.js"></script>
   
  </head>
 
@@ -76,7 +77,7 @@
 							<ul class="thumbnails">
 								<li class="col-sm-4">
 									<div class="device">
-                                    	<a href="#">
+                                    	<a id="deviceID0">
                                           <div class="caption">
                                               <h4 id="deviceBrand0"></h4>
                                               <p id="deviceName0"></p>
@@ -89,7 +90,7 @@
 								</li>
 								<li class="col-sm-4">
 									<div class="device">
-                                    	<a href="#">
+                                    	<a id="deviceID1">
                                           <div class="caption">
                                               <h4 id="deviceBrand1"></h4>
                                               <p id="deviceName1"></p>
@@ -102,7 +103,7 @@
 								</li>
 								<li class="col-sm-4">
 									<div class="device">
-                                    	<a href="#" class="disabled">
+                                    	<a id="deviceID2">
                                           <div class="caption">
                                               <h4 id="deviceBrand2"></h4>
                                               <p id="deviceName2"></p>
@@ -119,7 +120,7 @@
 							<ul class="thumbnails">
 								<li class="col-sm-4">
 									<div class="device">
-                                    	<a href="#" class="disabled">
+                                    	<a id="deviceID3">
                                           <div class="caption">
                                               <h4 id="deviceName3"></h4>
                                               <p id="deviceBrand3"></p>
@@ -132,7 +133,7 @@
 								</li>
 								<li class="col-sm-4">
 									<div class="device">
-                                    	<a href="#" class="disabled">
+                                    	<a id="deviceID4">
                                           <div class="caption">
                                               <h4 id="deviceBrand4"></h4>
                                               <p id="deviceName4"></p>
@@ -145,7 +146,7 @@
 								</li>
 								<li class="col-sm-4">
 									<div class="device">
-                                    	<a href="#" class="disabled">
+                                    	<a id="deviceID5">
                                           <div class="caption">
                                               <h4 id="deviceBrand5"></h4>
                                               <p id="deviceName5"></p>
