--- a/innovation.html
+++ b/innovation.html
@@ -29,8 +29,8 @@
   <script src="slider.js"></script>
   <script type="text/javascript" src="slider/js/jquery-1.11.3.min.js"></script>
   <script type="text/javascript" src="slider/js/jssor.slider.mini.js"></script>
-  <script src="responsivecarousel.js"></script>
-  <script src="../JS/inclusion.js"></script>
+  <script src="JS/inclusion.js"></script>
+  <script src="JS/script.js"></script>
   
  </head>
 
@@ -39,11 +39,21 @@
 <div class="include" data-include="navbar"></div>
 <div class="include" data-include="whowearenavbar"></div>
 
+<!-- BREADCRUMB -->
+<div class="container-fluid">
+	<div class="row">
+		<ol class="breadcrumb" >
+		  <li class="active"> Innovation </li>
+		</ol>
+	</div>
+</div>
+<!-- END BREADCRUMB -->
+
 
 <div class="container-fluid">
 	<div class="row">
 		<div class="innovation">
-			<img src="../images/Innovation.jpg"></img>
+			<img src="images/Innovation.jpg">
 		</div>
 	</div>
 </div>
@@ -57,7 +67,7 @@
 			Since 1990, M-Mobile has played its key role in the world evolution, <br>
 			never forgetting its traditions, along with the dinamic and innovative way of thinking.<br>
 			Our technology is intended for all of you that want to be connected with the world.</p></div>
-			<img class="logo" src="../images/logo.png"></img>
+			<img class="logo" src="images/logo.png">
 			<div><p>Share your experiences. Share your thoughts. Share your feelings.</p></div>
 		</div>
 	</div>
@@ -70,7 +80,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="whoweare">
-			<img src="../images/leader.jpg"></img>
+			<img src="images/leader.jpg">
 			<div>
 				<h3><b>Responsible leaders</b></h3>
 				<p>To be a leader, a person must have a deep-rooted<br>
@@ -94,7 +104,7 @@
 				great leaders can inspire others to improve themselves<br>
 				and to encourage discussion and exchange of views.</p>
 			</div>
-			<img src="../images/mobile-shopping.jpg"></img>
+			<img src="images/mobile-shopping.jpg">
 		</div>
 	</div>
 </div>
@@ -102,7 +112,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="whoweare">
-		<img src="../images/teamwork-web-redesign-project-team.jpg"></img>
+		<img src="images/teamwork-web-redesign-project-team.jpg">
 			<div>
 				<h3><b>Growing towards excellence</b></h3>
 				<p>M-Mobile is in continuous expansion and evolution: we<br>
