--- a/investors.html
+++ b/investors.html
@@ -26,7 +26,8 @@
 <!-- Bootstrap and JQuery js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="../JS/inclusion.js"></script>
+  <script src="JS/inclusion.js"></script>
+  <script src="JS/script.js"></script>
  </head>
 
 <body>
@@ -34,18 +35,27 @@
 <div class="include" data-include="navbar"></div>
 <div class="include" data-include="thegroupnavbar"></div>
 
+<!-- BREADCRUMB -->
+<div class="container-fluid">
+	<div class="row">
+		<ol class="breadcrumb">
+		  <li class="active"> Investors </li>
+		</ol>
+	</div>
+</div>
+<!-- END BREADCRUMB -->
 
 <!-- IMAGE AND TEXT -->
 	<div class="imgtext">
-		<img src="../images/investors.png">
+		<img src="images/investors.png">
 		<div class="businesstext">
 			<h3><b> M-MOBILE SHAREHOLDERS</b></h3>
 			<p> M-Mobile shareholders mainly consist of retail investors: approximately 480,000 shareholders according to the Shareholders’ Register.
 			</p>
-			<img src="/images/shareholdersgraphic.jpg">
+			<img src="images/shareholdersgraphic.jpg">
 			
 			<h3><b> CONSOLIDATED OPERATING AND FINANCIAL DATA</b></h3>
-			<img src="/images/financialsdata.jpg">
+			<img src="images/financialsdata.jpg">
 		</div>
 	</div>
 	
