--- a/navbar.html
+++ b/navbar.html
@@ -6,7 +6,7 @@
 						<a href="index.html" id="consumer">Consumer</a>
 					</li>
 					<li>
-						<a href="whoweare.html" id="whoweare">Who We Are</a>
+						<a href="innovation.html" id="whoweare">Who We Are</a>
 					</li>					
 					<li>
 						<a href="thegroup.html" id="thegroup">The Group</a>
