--- a/news.html
+++ b/news.html
@@ -26,7 +26,8 @@
 <!-- Bootstrap and JQuery js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="../JS/inclusion.js"></script>
+  <script src="JS/inclusion.js"></script>
+  <script src="JS/script.js"></script>
   
  </head>
 
@@ -35,6 +36,15 @@
 <div class="include" data-include="navbar"></div>
 <div class="include" data-include="thegroupnavbar"></div>
 
+<!-- BREADCRUMB -->
+<div class="container-fluid">
+	<div class="row">
+		<ol class="breadcrumb">
+		  <li class="active"> News </li>
+		</ol>
+	</div>
+</div>
+<!-- END BREADCRUMB -->
 
 <!-- IMAGE AND TEXT -->
 	<div class="newsbody">
