--- a/person.html
+++ b/person.html
@@ -3,14 +3,14 @@
 
 <head>
 
-
 <meta charset="utf-8">
 <meta http-equiv="X-UA-Compatible" content="IE=edge">
 <meta name="viewport" content="width=device-width, initial-scale=1">
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>SL Services</title>
+<title>Person</title>
+
 <!-- Bootstrap Core CSS -->
   <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 
@@ -19,16 +19,17 @@
  <link href="CSS/person.css" rel="stylesheet">
  <link href="CSS/footer.css" rel="stylesheet">
  <link href="CSS/navbar.css" rel="stylesheet">
- <!-- Font awesome icons -->
  
+ <!-- Font awesome icons -->
  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css">
  
 <!-- Bootstrap and JQuery js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="../JS/inclusion.js"></script>
+  <script src="JS/inclusion.js"></script>
+  <script src="JS/script.js"></script>
   
- </head>
+</head>
 
 <body>
 
@@ -48,43 +49,37 @@
 
 <div class="container-fluid">
 	<div class="row">
-		<div class="personhead">
-			<img src="../images/epayment.jpg">
-			<div class="backrect"><h3><b>PERSON</b></h3></div>
-		</div>
-	</div>
-</div>
+    	<div>
+          <div class="personhead">
+              <img src="images/epayment.jpg">
+              <div class="backrect"><h3><b>PERSON</b></h3></div>
+          </div>
 
-<div class="container-fluid">
-	<div class="row">
-		<div class="personbody">
-			<img src="../images/identita-pagamenti.jpg">
-			<h3>Digital Life</h3>
-			<p>In our life everyday we are in contact with digital transactions. They have to be secure and it is a crucial point. Also, storing money and personal data online has come to be a useful feature.
-			There is also an interesting aspect in what is represented by the digital signature: it is a powerful instrument to non only autorize things but also to prove your own identity.</p>
-		</div>
-	</div>
-</div>
+          <div class="personbody">
+              <img src="images/identita-pagamenti.jpg">
+              <h3>Digital Life</h3>
+              <p>In our life everyday we are in contact with digital transactions. They have to be secure and it is a crucial point. Also, storing money and personal data online has come to be a useful feature.
+              There is also an interesting aspect in what is represented by the digital signature: it is a powerful instrument to non only autorize things but also to prove your own identity.</p>
+          </div>
 
-<div class="container-fluid">
-	<div class="row">
-		<div class="personservices">
-			<legend>Our Services</legend>
-			<p>We developed an app that is able to help you with your daily routines,<br> storing credit cards, transport tickets and coupons with a high level of security and worldwide availability.
-			<br><br>Choose one of the services to discover more about it!</p>
-			<div class="col-xs-4 serviceimage">
-				<img src="../images/ticket.png">
-				<a href="#" class="btn btn-blue">Transports</a>
-			</div>
-			<div class="col-xs-4 serviceimage">
-				<img src="../images/payment.jpg">
-				<a href="#" class="btn btn-blue disabled">Payments</a>
-			</div>
-			<div class="col-xs-4 serviceimage">
-				<img src="../images/mobile-coupon.jpg">
-				<a href="#" class="btn btn-blue disabled">Coupons</a>
-			</div>		
-		</div>
+          <div class="personservices">
+              <legend>Our Services</legend>
+              <p>We developed an app that is able to help you with your daily routines,<br> storing credit cards, transport tickets and coupons with a high level of security and worldwide availability.
+              <br><br>Choose one of the services to discover more about it!</p>
+              <div class="col-xs-4 serviceimage">
+                  <img src="images/ticket.png">
+                  <a href="personcontent.html#name='Transport'" class="btn btn-blue">Transport</a>
+              </div>
+              <div class="col-xs-4 serviceimage">
+                  <img src="images/payment.jpg">
+                  <a href="#" class="btn btn-blue disabled">Payments</a>
+              </div>
+              <div class="col-xs-4 serviceimage">
+                  <img src="images/mobile-coupon.jpg">
+                  <a href="#" class="btn btn-blue disabled">Coupons</a>
+              </div>		
+          </div>
+       </div>
 	</div>
 </div>
 
