--- a/projects.html
+++ b/projects.html
@@ -26,7 +26,8 @@
 <!-- Bootstrap and JQuery js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="../JS/inclusion.js"></script>
+  <script src="JS/inclusion.js"></script>
+  <script src="JS/script.js"></script>
   
  </head>
 
@@ -34,6 +35,16 @@
 
 <div class="include" data-include="navbar"></div>
 <div class="include" data-include="whowearenavbar"></div>
+
+<!-- BREADCRUMB -->
+<div class="container-fluid">
+	<div class="row">
+		<ol class="breadcrumb" >
+		  <li class="active"> Projects</li>
+		</ol>
+	</div>
+</div>
+<!-- END BREADCRUMB -->
 
 <div class="container-fluid">
 	<div class="row">
@@ -59,7 +70,7 @@
 						</div>
 					</li>
 					<li>
-						<img src="../images/socialprojects.jpg">
+						<img src="images/socialprojects.jpg">
 						<div>
 							<h3><b>Social Projects</b></h3>
 							<p>M-Mobile is committed every day to the<br>
@@ -69,7 +80,7 @@
 						</div>
 					</li>
 					<li>
-						<img src="../images/innovativeprojects.jpg">
+						<img src="images/innovativeprojects.jpg">
 						<div>
 							<h3><b>Innovative Projects</b></h3>
 							<p>M-Mobile dedicates most of its resources and<br>
