--- a/testimonials.html
+++ b/testimonials.html
@@ -26,7 +26,8 @@
 <!-- Bootstrap and JQuery js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="../JS/inclusion.js"></script>
+  <script src="JS/inclusion.js"></script>
+  <script src="JS/script.js"></script>
   
  </head>
 
@@ -34,6 +35,16 @@
 
 <div class="include" data-include="navbar"></div>
 <div class="include" data-include="whowearenavbar"></div>
+
+<!-- BREADCRUMB -->
+<div class="container-fluid">
+	<div class="row">
+		<ol class="breadcrumb" >
+		  <li class="active"> Testimonials</li>
+		</ol>
+	</div>
+</div>
+<!-- END BREADCRUMB -->
 
 <div class="container-fluid">
 	<div class="row">
@@ -71,7 +82,8 @@
 						<div>
 							<h3><b>Bill and the future<br> innovations of M-Mobile</b></h3>
 						</div>
-					</li>			
+					</li>
+                 </ul>
 			</div>
 		</div>
 	</div>
