--- a/tventertainment.html
+++ b/tventertainment.html
@@ -10,7 +10,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>SL Services</title>
+<title>TV & Entertainment</title>
 <!-- Bootstrap Core CSS -->
   <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 
@@ -28,6 +28,7 @@
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script src="JS/inclusion.js"></script>
   <script src="JS/tvent.js"></script>
+  <script src="JS/script.js"></script>
   
  </head>
 
@@ -50,7 +51,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="tventhead">	
-			<img src="../images/tvent.jpg">
+			<img src="images/tvent.jpg">
 			<h3><b>TV<br>Limitless fun</b></h3>
 			<p>Discover the best movies, the most fascinating TV<br>
 			series, the most loved cartoons, sport and a lot more!</p>
@@ -100,7 +101,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="tventhead">	
-			<img src="../images/banner.jpg">
+			<img src="images/banner.jpg">
 			<h3><b>MUSIC<br>THe theme song of your life</b></h3>
 			<p>Listen to milions of songs in streaming, all the<br>
 			new and hot songs of the moment and a lot of<br>
@@ -151,7 +152,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="tventhead">	
-			<img src="../images/reading.jpg">
+			<img src="images/reading.jpg">
 			<h3><b>READING<br>Read what you want, wherever you want</b></h3>
 			<p>Bring always with you on your Smartphone or<br>
 			Tablet your favourite magazines and read your<br>
@@ -168,7 +169,7 @@
 					<div>
 						<h3 id="readingName3"></h3>
 						<p id="readingPresentation3"></p>
-						<a href="#" class="btn btn-blue">More details</a>
+						<a href="newspaper.html" class="btn btn-blue">More details</a>
 					</div>
 					<div>
 						<img id="readingImg3">
