--- a/whoweare.html
+++ b/whoweare.html
@@ -29,7 +29,8 @@
   <script src="slider.js"></script>
   <script type="text/javascript" src="slider/js/jquery-1.11.3.min.js"></script>
   <script type="text/javascript" src="slider/js/jssor.slider.mini.js"></script>
-  <script src="../JS/inclusion.js"></script>
+  <script src="JS/inclusion.js"></script>
+  <script src="JS/script.js"></script>
 </head>
 
 <body>
