--- a/allsmartlifeservices.html
+++ b/allsmartlifeservices.html
@@ -26,7 +26,8 @@
 <!-- Bootstrap and JQuery js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="../JS/inclusion.js"></script>
+  <script src="JS/inclusion.js"></script>
+  <script src="JS/script.js"></script>
   
  </head>
 
@@ -35,10 +36,20 @@
 <div class="include" data-include="navbar"></div>
 <div class="include" data-include="consumernavbar"></div>
 
+<!-- BREADCRUMB -->
+<div class="container-fluid">
+	<div class="row">
+		<ol class="breadcrumb" >
+		  <li class="active"> All SL Services </li>
+		</ol>
+	</div>
+</div>
+<!-- END BREADCRUMB -->
+
 <!-- SMART LIFE CATEGORIES-->
 	<div class="allsmartlife">
 			<div class="tvandentertainment">
-				<img src="../images/tvandentertainment2.jpg">
+				<img src="images/tvandentertainment2.jpg">
 				<div class="textandbutton">
 					<h3> TV & ENTERTAINMENT</h3>
 					<p> Discover your favourite form of entertainment.<br> The fun begins now! </p>
@@ -50,7 +61,7 @@
 				</div>
 			</div>
 			<div class="person">
-				<img src="../images/epayment.jpg">
+				<img src="images/epayment.jpg">
 				<div class="textandbutton">
 					<h3> PERSON</h3>
 					<p> Organize and manage your digital payments: a new approach to the world of e-payment and digital ID!</p>
@@ -62,7 +73,7 @@
 				</div>
 			</div>
 			<div class="homeandfamily">
-				<img src="../images/homeandfamily2.jpg">
+				<img src="images/homeandfamily2.jpg">
 				<div class="textandbutton">
 					<h3> HOME & FAMILY </h3>
 					<p>Smart Life means simpler and safer life. <br> Also for your house and your family.</p>
@@ -74,7 +85,7 @@
 				</div>
 			</div>
 			<div class="healthandfitness">
-				<img src="../images/healthandfitness2.png">
+				<img src="images/healthandfitness2.png">
 				<div class="textandbutton">
 					<h3> HEALTH & FITNESS </h3>
 					<p> Discover how health and fitness can improve your life and share it with your friends! </p>
