--- a/assistancecategory.html
+++ b/assistancecategory.html
@@ -10,7 +10,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>Line Management</title>
+<title></title>
 <!-- Bootstrap Core CSS -->
   <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 
@@ -27,8 +27,9 @@
 <!-- Bootstrap and JQuery js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="../JS/inclusion.js"></script>
-  
+  <script src="JS/inclusion.js"></script>
+  <script src="JS/assistances.js"></script>
+  <script src="JS/script.js"></script>
  </head>
 
 <body>
@@ -41,7 +42,7 @@
 	<div class="row">
 		<ol class="breadcrumb" >
 		  <li><a href="allassistanceservices.html">All Assistance Services</a></li>
-		  <li class="active"> Line Management </li>
+		  <li class="active" id="bc"> </li>
 		</ol>
 	</div>
 </div>
@@ -51,57 +52,9 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="services">
-			<h3> LINE MANAGEMENT </h3>
-			<legend> RESIDENTIAL</legend>
-			<div class="servicetype">
-				<h3> Line management </h3>
-				<ul>
-					<li><a href="assistancecontent.html" > Residential line activation</a></li>
-					<li><a href="#"  class="disabled"> Managing subscription</a></li>
-					<li><a href="#"  class="disabled" > Termination of contract</a></li>
-				</ul>
-				<h3> Managing phone services </h3>
-				<ul>
-					<li><a href="#"  class="disabled"> Deactivation of residential line services</a></li>
-					<li><a href="#"  class="disabled"> Telephone books at your house</a></li>
-				</ul>
-			</div>
+		
 			
-			<legend> MOBILE </legend>
-			<div class="servicetype">
-				<h3> Managing your SIM card </h3>
-				<ul>
-					<li><a href="#"  class="disabled">From subscription to rechargeable phone card</a></li>
-					<li><a href="#"  class="disabled">From rechargable phone card to subscription  </a></li>
-					<li><a href="#"  class="disabled"> MMS</a></li>
-				</ul>
-				<h3> Activation and termination of content services </h3>
-				<ul>
-					<li><a href="#"  class="disabled"> Verify line coverage</a></li>
-				</ul>
-				<h3> Managing mobile line when abroad </h3>
-				<ul>
-					<li><a href="#"  class="disabled"> Verify your credit while you are abroad</a></li>
-					<li><a href="#"  class="disabled"> How to use Internet while abroad</a></li>
-				</ul>
-				<h3> All way of recharging your phone card </h3>
-				<ul>
-					<li><a href="#"  class="disabled"> All way of recharging your phone card</a></li>
-					<li><a href="#"  class="disabled"> Fast recharge</a></li>
-				</ul>
-			</div>
 			
-			<legend>HELP MOVING TO M-MOBILE</legend>
-			<div class="servicetype">
-				<h3> New Smart for home and mobile </h3>
-				<ul>
-					<li><a href="#"  class="disabled"> M-Mobile Smart</a></li>
-				</ul>
-				<h3> Moving to M-Mobile from a different mobile line</h3>
-				<ul>
-					<li><a href="#" class="disabled"> How to enter M-Mobile with your mobile line </a></li>
-				</ul>
-			</div>
 		</div>
 	</div>
 </div>
