--- a/devicecontent.html
+++ b/devicecontent.html
@@ -26,8 +26,9 @@
 <!-- Bootstrap and JQuery js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="../JS/inclusion.js"></script>
-  <script src="../JS/devicecontent.js"></script>
+  <script src="JS/inclusion.js"></script>
+  <script src="JS/devicecontent.js"></script>
+  <script src="JS/script.js"></script>
   
  </head>
 
