--- a/healthfitness.html
+++ b/healthfitness.html
@@ -10,7 +10,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>SL Services</title>
+<title>Health & Fitness</title>
 <!-- Bootstrap Core CSS -->
   <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 
@@ -27,7 +27,8 @@
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script src="JS/inclusion.js"></script>
-  <script sec="JS/healthfit.js"></script>
+  <script src="JS/healthfit.js"></script>
+  <script src="JS/script.js"></script>
   
  </head>
 
@@ -41,7 +42,7 @@
 	<div class="row">
 		<ol class="breadcrumb" >
 		  <li><a href="allsmartlifeservices.html">All SL Services</a></li>
-		  <li class="active"> Health & Fitness</li>
+		  <li class="active" id="bc"> Health & Fitness</li>
 		</ol>
 	</div>
 </div>
@@ -50,7 +51,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="homefamhead">
-			<img src="../images/healthandfitness2.png">
+			<img src="images/healthandfitness2.png">
 			<div class="backrect"><h3><b>HEALTH & FITNESS</b></h3></div>
 		</div>
 	</div>
@@ -62,18 +63,18 @@
 			<h3><b>Smart Watches</b></h3>
 			<div class="row">
 				<div class="col-xs-4 col-xs-offset-2">
+					<h3 id="hfBrand2"></h3>
+					<h3 id="hfName2"></h3>
+					<img id="hfImg2">
+					<p id="hfPresentation2"></p>
+					<a href="#" class="btn btn-blue" id="hfbtn2">More details</a>
+				</div>
+				<div class="col-xs-4">
 					<h3 id="hfBrand3"></h3>
 					<h3 id="hfName3"></h3>
 					<img id="hfImg3">
 					<p id="hfPresentation3"></p>
-					<a href="#" class="btn btn-blue">More details</a>
-				</div>
-				<div class="col-xs-4">
-					<h3 id="hfBrand4"></h3>
-					<h3 id="hfName4"></h3>
-					<img id="hfImg4">
-					<p id="hfPresentation4"></p>
-					<a href="#" class="btn btn-blue">More details</a>
+					<a href="#" class="btn btn-blue" id="hfbtn3">More details</a>
 				</div>
 			</div>
 		</div>
@@ -89,34 +90,16 @@
 					<h3 id="hfName0"></h3>
 					<img id="hfImg0">
 					<p id="hfPresentation0"></p>
-					<a href="#" class="btn btn-blue">More details</a>
+					<a href="#" class="btn btn-blue" id="hfbtn0">More details</a>
 				</div>
 				<div class="col-xs-4">
 					<h3 id="hfBrand1"></h3>
 					<h3 id="hfName1"></h3>
 					<img id="hfImg1">
 					<p id="hfPresentation1"></p>
-					<a href="#" class="btn btn-blue">More details</a>
+					<a href="#" class="btn btn-blue" id="hfbtn1">More details</a>
 				</div>
 			</div>	
-		</div>
-	</div>
-</div>
-
-<div class="container-fluid">
-	<div class="row">
-		<div class="homefambody">
-			<h3><b>OTHER</b></h3>
-			<div class="row">
-				<div class="col-xs-4 col-xs-offset-4">
-					<h3 id="hfBrand2"></h3>
-					<h3 id="hfName2"></h3>
-					<img id="hfImg2">
-					<p id="hfPresentation2"></p>
-					<a href="#" class="btn btn-blue">More details</a>
-				</div>
-			</div>		
-		</div>
 		</div>
 	</div>
 </div>
