--- a/homefamily.html
+++ b/homefamily.html
@@ -10,7 +10,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>SL Services</title>
+<title>Home & Family</title>
 <!-- Bootstrap Core CSS -->
   <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
 
@@ -27,7 +27,9 @@
 <!-- Bootstrap and JQuery js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="../JS/inclusion.js"></script>
+  <script src="JS/inclusion.js"></script>
+  <script src="JS/homefam.js"></script>
+  <script src="JS/script.js"></script>
   
  </head>
 
@@ -40,7 +42,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<ol class="breadcrumb" >
-		  <li><a href="allsmartservices.html">All SL Services</a></li>
+		  <li><a href="allsmartlifeservices.html">All SL Services</a></li>
 		  <li class="active"> Home & Family</li>
 		</ol>
 	</div>
@@ -50,7 +52,7 @@
 <div class="container-fluid">
 	<div class="row">
 		<div class="homefamhead">
-			<img src="../images/homeandfamily2.jpg">
+			<img src="images/homeandfamily2.jpg">
 			<div class="backrect"><h3><b>HOME & FAMILY</b></h3></div>
 		</div>
 	</div>
@@ -62,38 +64,34 @@
 			<h3><b>Security</b></h3>
 			<div class="row">
 				<div class="col-xs-4 col-xs-offset-2">
-					<h3>D-Link</h3>
-					<h3>Motorized Camera</h3>
-					<img src="../images/motorizedcamera.jpg">
-					<p>The camera allow to monitor an entire room no matter
-					where it is placed, thanks to a 340 degrees action range</p>
-					<a href="#" class="btn btn-blue disabled">More details</a>
+					<h3 id="hfBrand0"></h3>
+					<h3 id="hfName0"> </h3>
+					<img id="hfImg0">
+					<p id="hfPresentation0"></p>
+					<a id="hftbn0">More details</a>
 				</div>
 				<div class="col-xs-4">
-					<h3>D-Link</h3>
-					<h3>Fixed Camera</h3>
-					<img src="../images/fixedcamera.jpg">
-					<p>A good solution to monitor your home or a small office all day
-					long. THe camera has an infrared LED that grants vision also with no light</p>
-					<a href="#" class="btn btn-blue disabled">More details</a>
+					<h3 id="hfBrand1"></h3>
+					<h3 id="hfName1"></h3>
+					<img id="hfImg1">
+					<p id="hfPresentation1"></p>
+					<a id="hftbn1">More details</a>
 				</div>
 			</div>
 			<div class="row">
 				<div class="col-xs-4 col-xs-offset-2">
-					<h3>D-Link</h3>
-					<h3>SmartHome</h3>
-					<img src="../images/DLinkHD.jpg">
-					<p>D-Link SmartHome Starter Kit offers the possibility to set,
-					manage and monitor your home everywhere you are</p>
-					<a href="#" class="btn btn-blue">More details</a>
+					<h3 id="hfBrand2"></h3>
+					<h3 id="hfName2"></h3>
+					<img id="hfImg2">
+					<p id="hfPresentation2"></p>
+					<a id="hftbn2">More details</a>
 				</div>
 				<div class="col-xs-4">
-					<h3></h3>
-					<h3>WeR@Home</h3>
-					<img src="../images/essence.jpg">
-					<p>Keep under control what happens in your house at any
-					time with your Smartphone.<br>Three months of service included!</p>
-					<a href="#" class="btn btn-blue disabled">More details</a>
+					<h3 id="hfBrand3"></h3>
+					<h3 id="hfName3"></h3>
+					<img id="hfImg3">
+					<p  id="hfPresentation3"></p>
+					<a id="hftbn3">More details</a>
 				</div>
 			</div>	
 		</div>
@@ -106,20 +104,18 @@
 			<h3><b>Utility & design</b></h3>
 			<div class="row">
 				<div class="col-xs-4 col-xs-offset-2">
-					<h3>ZyXEL</h3>
-					<h3>Reapeater Wi-Fi N300</h3>
-					<img src="../images/zyxel2.jpg">
-					<p>N300 by ZyXEL offers an easy solution for extending your Wi-Fi network
-					at home. It has a compact design and is easy to install</p>
-					<a href="#" class="btn btn-blue disabled">More details</a>
+					<h3 id="hfBrand4"></h3>
+					<h3 id="hfName4"></h3>
+					<img id="hfImg4">
+					<p id="hfPresentation4"></p>
+					<a id="hftbn4">More details</a>
 				</div>
 				<div class="col-xs-4">
-					<h3>Philips</h3>
-					<h3>Livingcolours Bloom</h3>
-					<img src="../images/bloom.png">
-					<p>The starter kit Philips friends of hue Bloom white offers you the possibility
-					to create the type of illumination you desire via Smartphone or other devices</p>
-					<a href="#" class="btn btn-blue disabled">More details</a>
+					<h3 id="hfBrand5"></h3>
+					<h3 id="hfName5"></h3>
+					<img id="hfImg5">
+					<p id="hfPresentation5"></p>
+					<a id="hftbn5">More details</a>
 				</div>
 			</div>		
 		</div>
