--- a/newspaper.html
+++ b/newspaper.html
@@ -10,7 +10,7 @@
 <meta name="description" content="">
 <meta name="author" content="">
 
-<title>SL Services</title>
+<title>Daily Newspaper</title>
 <!-- Bootstrap Core CSS -->
   <link href="bootstrap/css/bootstrap.css" rel="stylesheet">
  <link href="CSS/footer.css" rel="stylesheet">
@@ -30,6 +30,7 @@
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
   <script src="JS/inclusion.js"></script>
   <script src="JS/newspaper.js"></script>
+  <script src="JS/script.js"></script>
   
   
  </head>
@@ -38,6 +39,18 @@
 
 <div class="include" data-include="navbar"></div>
 <div class="include" data-include="consumernavbar"></div>
+
+<!-- BREADCRUMB -->
+<div class="container-fluid">
+	<div class="row">
+		<ol class="breadcrumb" >
+		  <li><a href="allsmartlifeservices.html">All SL Services</a></li>
+          <li><a href="tventertainment.html"> TV & Entertainment</a></li>
+		  <li class="active"> Daily Newspaper </li>
+		</ol>
+	</div>
+</div>
+<!-- END BREADCRUMB -->
 
 <div class="container-fluid">
 	<div class="row">
@@ -174,6 +187,9 @@
 				<div class="col-xs-2 articlename" id="npName11"></div> 
 				<div class="col-xs-2 articleprice" id="npPrice11"></div>
 			</div>
+			</ul>
+            <legend> Related Devices </legend>
+			<ul id="relDev">
 			</ul>
 		</div>
 	</div>
