--- a/promotions.html
+++ b/promotions.html
@@ -29,7 +29,9 @@
 <!-- Bootstrap and JQuery js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="../JS/inclusion.js"></script>
+  <script src="JS/inclusion.js"></script>
+  <script src="JS/promotions.js"></script>
+  <script src="JS/script.js"></script>
   
  </head>
 
@@ -38,165 +40,37 @@
 <div class="include" data-include="navbar"></div>
 <div class="include" data-include="consumernavbar"></div>
 
+<!-- BREADCRUMB -->
+<div class="container-fluid">
+	<div class="row">
+		<ol class="breadcrumb" >
+		  <li class="active"> Promotions</li>
+		</ol>
+	</div>
+</div>
+<!-- END BREADCRUMB -->
+
 <!--DEVICES IMAGE -->
 <div class="devimage">
 	<div class="container-fluid">
 		<div class="row">
-			<img src="../images/promotions.jpg">
+			<img src="images/promotions.jpg">
 		</div>
 	</div>
 </div>
 <!--DEVICES IMAGE -->
 
-<!-- ALL DEVICES BY CATEGORY-->
+<!-- PROMOTION GRID-->
 <div class="container-fluid">
 	<div class="row">
 		<div class="promodevices">
-			<div class="smartphones">
-				<h3> PROMOTIONS </h3>
-				<div class="row">
-					<div class="col-xs-4">
-						<div class="device">
-							<div class="caption">
-								<h4>Microsoft</h4>
-								<p>Lumia 950</p>
-							</div>
-							<div class="thumbnail">
-								<img src="../images/microsoft-LUMIA950.jpg" alt="">
-							</div>
-							<div class="pricetag" style="text-decoration: line-through;"> 29,90 €/month
-							</div>
-							<div class="pricediscount" > 27,00 €/month </div>
-							<div class="row">
-								<div class="col three">				
-									<a href="#" class="btn btn-blue disabled">More details</a>			
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-4">
-						<div class="device">
-							<div class="caption">
-								<h4>Samsung</h4>
-								<p>Galaxy A5</p>
-							</div>
-							<div class="thumbnail">
-								<img src="../images/GALAXY_A5.jpg" alt="">
-							</div>
-							<div class="pricetag" style="text-decoration: line-through;"> 439,90 €
-							</div>
-							<div class="pricediscount"> 359,00 € </div>
-							<div class="row">
-								<div class="col three">				
-									<a href="#" class="btn btn-blue disabled">More details</a>			
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-4">
-						<div class="device">
-							<div class="caption">
-								<h4>Alcatel</h4>
-								<p>ONE TOUCHE Pixi3 8</p>
-							</div>
-							<div class="thumbnail">
-								<img src="../images/alcatel-pixi3.jpg" alt="">
-							</div>
-							<div class="pricetag" style="text-decoration: line-through;"> 99,90 €
-							</div>
-							<div class="pricediscount">	69,00 €</div>
-							<div class="row">
-								<div class="col three">				
-									<a href="#" class="btn btn-blue disabled">More details</a>			
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-xs-4">
-						<div class="device">
-							<div class="caption">
-								<h4>Apple</h4>
-								<p>iPad Mini 4</p>
-							</div>
-							<div class="thumbnail">
-								<img src="../images/ipad-mini-4.jpg" alt="">
-							</div>
-							<div class="pricetag" style="text-decoration: line-through;"> 529,90 € 
-							</div>
-							<div class="pricediscount"> 489,00 € </div>
-							<div class="row">
-								<div class="col three">				
-									<a href="#" class="btn btn-blue disabled">More details</a>			
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-4">
-						<div class="device">
-							<div class="caption">
-								<h4>Tecnoware</h4>
-								<p>ERA Plus 900</p>
-							</div>
-							<div class="thumbnail">
-								<img src="../images/tecnoware900.jpg" alt="">
-							</div>
-							<div class="pricetag" style="text-decoration: line-through;"> 79,90 €
-							</div>
-							<div class="pricediscount">	69,00 €</div>
-							<div class="row">
-								<div class="col three">				
-									<a href="#" class="btn btn-blue disabled">More details</a>			
-								</div>
-							</div>
-						</div>
-					</div>
-					<div class="col-xs-4">
-						<div class="device">
-							<div class="caption">
-								<h4>Newspaper</h4>
-								<p>Corriere della Sera</p>
-							</div>
-							<div class="thumbnail">
-								<img src="../images/corrieredellasera.png" alt="">
-							</div>
-							<div class="pricetag"> 19,90 €/month
-							</div>
-							<div class="pricediscount">	First 3 months free! </div>
-							<div class="row">
-								<div class="col three">				
-									<a href="#" class="btn btn-blue disabled">More details</a>			
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
-				<div class="row">
-					<div class="col-xs-4">
-						<div class="device">
-							<div class="caption">
-								<h4>Newspaper</h4>
-								<p>La Repubblica</p>
-							</div>
-							<div class="thumbnail">
-								<img src="../images/larepubblica.png" alt="">
-							</div>
-							<div class="pricetag"> 15,99 €/month
-							</div>
-							<div class="pricediscount"> The next 2 months are discounted by 70%! </div>
-							<div class="row">
-								<div class="col three">				
-									<a href="#" class="btn btn-blue disabled">More details</a>			
-								</div>
-							</div>
-						</div>
-					</div>
-				</div>
+        	<legend> Promotions </legend>
+			<div class="smartphones" id="promo">
+			</div>
 		</div>
 	</div>
 </div>
-<!-- END SMART LIFE CATEGORIES -->
+<!-- END PROMOTIONS GRID -->
 
 <!--FOOTER-->
 <div class="include" data-include="footer"></div>
