--- a/thegroup.html
+++ b/thegroup.html
@@ -26,7 +26,8 @@
 <!-- Bootstrap and JQuery js -->
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.2/jquery.min.js"></script>
   <script src="http://maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
-  <script src="../JS/inclusion.js"></script>
+  <script src="JS/inclusion.js"></script>
+  <script src="JS/script.js"></script>
    
   
  </head>
@@ -39,9 +40,9 @@
 
 <!-- IMAGE AND TEXT -->
 	<div class="imgtext">
-		<img src="../images/worldconnected.jpg">
+		<img src="images/worldconnected.jpg">
 		<div class="thegrouptext">
-			<img src="../images/logo.png">
+			<img src="images/logo.png">
 			<h3> The future of our country passes through social and technological innovation. 
 				Just in the year 2015 we laid 2.2 million km of fiber-optic network. 
 				In the Group, about 53 thousand people work every day with this objective in mind. 
@@ -49,12 +50,12 @@
 			</h3>
 			<p> We develop new generation infrastructures with the goal of ensuring that around 84% of Italian houses have coverage via the new fixed ultra-broadband network and 98% of the population via  the new mobile network by the end of 2018. 
 				As we believe digital technologies are the basis for a smart, sustainable and inclusive growth. 
-				By the end of March 2016, with a total of 11 million km of installed fiber, the fixed network has already reached 45% of the houses and 1,100 municipalities; the mobile network reached 92% of the population and 6,200 municipalities.</br></br>
+				By the end of March 2016, with a total of 11 million km of installed fiber, the fixed network has already reached 45% of the houses and 1,100 municipalities; the mobile network reached 92% of the population and 6,200 municipalities.<br><br>
 				To simplify the daily life there are new solutions: electronic payment systems, smart homes, electronic medical records and certified electronic mail in the healthcare and government sectors, for the schools  interactive multimedia whiteboards and web-based learning environments. 
-				For businesses, advanced platforms for cloud computing for the virtualization of applications and infrastructures, a vast selection of applications for storing and managing data or controlling energy consumption, products and software to enhance the use of digital signatures.</br></br>
-				For everyone, digital technology means to be always connected and access services and digital  content - games, e-books, music and films, all constantly enriched with premium contents - with ease and safety; all of this seamlessly on smartphones, tablets or other devices.</br></br>
+				For businesses, advanced platforms for cloud computing for the virtualization of applications and infrastructures, a vast selection of applications for storing and managing data or controlling energy consumption, products and software to enhance the use of digital signatures.<br><br>
+				For everyone, digital technology means to be always connected and access services and digital  content - games, e-books, music and films, all constantly enriched with premium contents - with ease and safety; all of this seamlessly on smartphones, tablets or other devices.<br><br>
 				Through the M-Mobile Foundation we promote a vision of innovation and technology as social enablers, supporting projects in the fields of  digital education and cultural innovation. 
-				As a result of the company’s social and environmental commitment, we have been included among the most important and selective stock market Sustainability indexes worldwide, for the last eleven years.</br></br>
+				As a result of the company’s social and environmental commitment, we have been included among the most important and selective stock market Sustainability indexes worldwide, for the last eleven years.<br><br>
 			</p>
 		</div>
 	</div>
